--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https:zyqi17.github.io"
+baseURL = "https://zyqi17.github.io"
 languageCode = "en-us"
 title = "LeaveIt"
 theme = "LeaveIt"
@@ -16,7 +16,7 @@ preserveTaxonomyNames = true
   noreferrerLinks = true
 
 [Permalinks]
- posts = "/:year/:filename/"
+ posts = "/:year/:month/:slug/"
 
 [menu]
   [[menu.main]]
@@ -40,8 +40,8 @@ preserveTaxonomyNames = true
     weight = 4
 
 [params]
-    since = 2011
-    author = "Covey.Liu"                           # Author's name
+    since = 2021
+    author = "Jerry.Qi"                           # Author's name
     avatar = "/images/me/avatar.jpeg"           # Author's avatar
     subtitle = "我会更好，因为我没有停止"         # Subtitle
     cdn_url = ""           # Base CDN URL
@@ -68,3 +68,9 @@ preserveTaxonomyNames = true
     Dribbble = "xxoo"
     Medium = "xxoo"
 
+# html语法支持
+[markup]
+defaultMarkdownHandler = "goldmark"
+[markup.goldmark]
+  [markup.goldmark.renderer]
+    unsafe = true
